apps/unifi/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-controller
  namespace: unifi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: unifi-controller
  template:
    metadata:
      labels:
        app: unifi-controller
    spec:
      containers:
      - name: unifi-controller
        image: lscr.io/linuxserver/unifi-controller:latest@sha256:0ae315a3a45635e443899e30e86bd507c2c48922cb27f4bc7241777885f4650e
        ports:
        - containerPort: 443 # web UI (https)
          protocol: TCP
        - containerPort: 8843 # guest portal https
          hostPort: 8843
          protocol: TCP
        - containerPort: 8880 # guest portal http
          hostPort: 8880
          protocol: TCP
        - containerPort: 80 # device inform
          hostPort: 8085
          protocol: TCP
        - containerPort: 3478 # STUN
          hostPort: 3478
          protocol: UDP
        - containerPort: 10001 # AP L2 discovery
          hostPort: 10001
          protocol: UDP
        volumeMounts:
        - name: config
          mountPath: /config
      volumes:
      - name: config
        hostPath:
          path: /data/crypt/unifictl/config
          type: Directory
