apps/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-controller
  namespace: unifi
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    traefik.ingress.kubernetes.io/service.serverstransport: unifi-unifi-transport@kubernetescrd
spec:
  selector:
    app: unifi-controller
  ports:
    - name: https
      port: 443
      targetPort: 443
